# code-completions

./: .pre-commit-config.yaml  README.md  pyproject.toml  report.md
analysis/: EDA.ipynb
analysis/.ipynb_checkpoints/: EDA-checkpoint.ipynb
data/: completions.json  dataset.json  real.json
generate/: generate_completions.py  generate_real.py
utils/: calculate_metrics.py  dataset_scaffolding.py  labeling_app.py  test_model.py
